--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+resources/application-API-KEY.properties
+
 ### STS ###
 .apt_generated
 .classpath
