--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:h2:tcp://localhost/~/assignment3
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+
+spring.profiles.include=API-KEY
