[fix] : @SQLInsert로 on duplicate key update 구문 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/assignment3
+spring.datasource.url=jdbc:h2:tcp://localhost/~/assignment3;mode=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 
